# voxel_raytracer

./: Cargo.toml  README.md
docs/: _config.yml  about.html  index.html  index.md
docs/_layouts/: default.html
docs/_posts/: 2023-04-19-initialization.md  2023-05-18-chunks-and-acceleration.md  2023-05-21-light-and-reflection.md
docs/_posts/blog/: 2023-04-18-project-outline.md  2023-04-19-initialization.md  2023-05-05-the-dda-algorithm.md
docs/assets/css/: style.css
docs/blog/: index.html
src/: camera.rs  lib.rs  main.rs  model.rs  raytracing.wgsl  resources.rs  scene.rs  screen_shader.wgsl  shader.wgsl  texture.rs
