[package]
name = "voxel_raytracer"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxel_raytracer_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "voxel_raytracer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3"
bytemuck = {version = "1.13.1", features = ["derive"]}
cgmath = "0.18"
anyhow = "1.0"
tobj = { version = "3.2", features = ["async"]}
instant = "0.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = {version = "0.11"}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"